Use font swap to ensure text remains visible

--- a/styles/base/_fonts.scss
+++ b/styles/base/_fonts.scss
@@ -3,6 +3,7 @@
   src: url('/fonts/raleway-regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url('/fonts/raleway-medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url('/fonts/raleway-semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,4 +27,5 @@
   src: url('/fonts/raleway-bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
